added heterograph conversion

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "61ac50a1-ed06-4a74-9f8b-1c6627fcc550",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c69c5d23-ca18-4238-85a7-82abf3d8cdbd",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "dce07246-8e4f-4568-8bff-ee46f3920cae",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "a2cb36ce-0f44-498c-b405-6a1c6e9148c2",
    "metadata": {},
    "outputs": [],
@@ -58,12 +58,12 @@
     "    for y in x:\n",
     "        if y > num_nodes:\n",
     "            num_nodes = y\n",
-    "num_nodes += 1\n"
+    "num_nodes += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "5e6ae053-f7d2-4918-8bad-2e2028d12ea8",
    "metadata": {},
    "outputs": [],
@@ -76,6 +76,58 @@
     "pin2net = np.array(dataset['pin_info']['pin2net_map'])\n",
     "pin2node = np.array(dataset['pin_info']['pin2node_map'])\n",
     "pindir = dataset['pin_info']['pin_direct']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x_min': 0.0,\n",
+       " 'y_min': 0.0,\n",
+       " 'x_max': 696.0,\n",
+       " 'y_max': 692.6315789473684,\n",
+       " 'site_width': 1.0,\n",
+       " 'row_height': 7.368421052631579,\n",
+       " 'num_nodes': 12026,\n",
+       " 'num_movable_nodes': 10078,\n",
+       " 'num_terminals': 0,\n",
+       " 'num_terminal_NIs': 388,\n",
+       " 'num_filler_nodes': 1560,\n",
+       " 'grid_cell_shape': (64, 64)}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['db_place_info']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dict_keys(['node_name', 'node_name2id_map', 'node_position', 'node_size', 'flat_node2pin_map', 'flat_node2pin_start_map', 'cell_mapper']),\n",
+       " dict_keys(['pin2node_map', 'pin2net_map', 'pin_offset', 'pin_direct']))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['node_info'].keys(), dataset['pin_info'].keys()"
    ]
   },
   {
@@ -693,6 +745,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10466, 10587)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def star_hetero(hinc: list, W):\n",
+    "\n",
+    "    \n",
+    "    ##          (net-to-node)\n",
+    "    ##    [ 0       H.T\n",
+    "    ##      H        0 ]\n",
+    "    ## (node-to-net)\n",
+    "\n",
+    "\n",
+    "    num_nodes = 0\n",
+    "    for x in hinc:\n",
+    "        for y in x:\n",
+    "            if y > num_nodes:\n",
+    "                num_nodes = y\n",
+    "    num_nodes += 1\n",
+    "    num_nets = len(hinc)\n",
+    "    num_pins = sum([len(x) for x in hinc])\n",
+    "\n",
+    "\n",
+    "    colptrx = 0\n",
+    "    colptr = []\n",
+    "    colidx = []\n",
+    "    # E x V\n",
+    "    for nodes in hinc:\n",
+    "        colptr.append(colptrx)\n",
+    "        colidx += nodes.tolist()\n",
+    "        colptrx += len(nodes)\n",
+    "\n",
+    "    H_VE = csc_array((np.ones(num_pins, dtype=int), colidx, colptr))\n",
+    "\n",
+    "    print(H_VE.shape)\n",
+    "\n",
+    "W = np.ones(len(ar), dtype=float)\n",
+    "A = star_hetero(ar, W)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 327,
    "id": "43909227-a8db-410e-a84b-6920b6cc733f",
    "metadata": {},
@@ -1016,7 +1118,7 @@
   "kernelspec": {
    "display_name": "dgl",
    "language": "python",
-   "name": "dgl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
