--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -2,14 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3332b7d1-204c-4b68-8e8d-00895f8106cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import dgl.sparse as dglsp\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SparseMatrix(indices=tensor([[1, 1, 2],\n",
+       "                             [2, 4, 3]]),\n",
+       "             values=tensor([0.5000, 0.5000, 1.0000]),\n",
+       "             shape=(3, 5), nnz=3)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indices = torch.tensor([[1, 1, 2],\n",
+    "                        [2, 4, 3]])\n",
+    "\n",
+    "A = dglsp.spmatrix(indices)\n",
+    "D = dglsp.diag(1/ A.sum(dim=1))\n",
+    "D @ A"
    ]
   },
   {
@@ -150,7 +180,7 @@
   "kernelspec": {
    "display_name": "dgl",
    "language": "python",
-   "name": "dgl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
