--- a/corr_plot.ipynb
+++ b/corr_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "392a2a89-2c0c-4be8-a5dd-e73a83fdaa78",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "23b44720-3e50-4fd8-b284-b96b164731e4",
    "metadata": {},
    "outputs": [],
@@ -98,34 +98,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.04266011, 0.05893582, 0.12926938, ..., 0.03435501, 0.08887083,\n",
-       "        0.10653134],\n",
-       "       [0.01619531, 0.11473597, 0.05808922, ..., 0.05927154, 0.06562952,\n",
-       "        0.04795343],\n",
-       "       [0.01229661, 0.03267673, 0.14240364, ..., 0.12428898, 0.06921081,\n",
-       "        0.02467098],\n",
-       "       ...,\n",
-       "       [0.00154263, 0.02692081, 0.13650598, ..., 0.26778141, 0.11951944,\n",
-       "        0.00012519],\n",
-       "       [0.00037859, 0.11218039, 0.08422526, ..., 0.00638504, 0.10389877,\n",
-       "        0.00307752],\n",
-       "       [0.05010459, 0.00850186, 0.01824236, ..., 0.11216296, 0.01638199,\n",
-       "        0.05375989]])"
+       "array([   1.644722,   75.08486 ,  148.525   ,  221.96513 ,  295.40527 ,\n",
+       "        368.84543 ,  442.28555 ,  515.7257  ,  589.16583 ,  662.60596 ,\n",
+       "        736.04614 ,  809.48627 ,  882.9264  ,  956.3665  , 1029.8066  ,\n",
+       "       1103.2468  , 1176.687   , 1250.1271  , 1323.5673  , 1397.0073  ,\n",
+       "       1470.4475  ], dtype=float32)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eratio['arr_0']"
+    "bins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bins = np.histogram(np.log10(np.array(hpwl_collection)), bins=10)[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.digitize(np.log10(np.array(hpwl_collection)), bins, right=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 484.3158  , 1470.4475  ,  142.4211  , ...,   44.144775,\n",
+       "         15.750015,   20.039474], dtype=float32)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hpwl_collection"
    ]
   },
   {
