hier level as x feat

--- a/corr_plot.ipynb
+++ b/corr_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "392a2a89-2c0c-4be8-a5dd-e73a83fdaa78",
    "metadata": {},
    "outputs": [],
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "23b44720-3e50-4fd8-b284-b96b164731e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "top = 'aes_cipher_top'"
+    "top = 'bsg_chip'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "e1b00703-1c05-479a-bc57-4ab1707a6149",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,19 @@
     "\n",
     "pin2net = np.array(dataset['pin_info']['pin2net_map'])\n",
     "pin2node = np.array(dataset['pin_info']['pin2node_map'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xx = dataset['node_info']['node_name']\n",
+    "with open('xx.txt', 'w') as f:\n",
+    "    for x in xx:\n",
+    "        f.write(x.decode('UTF-8'))\n",
+    "        f.write('\\n')"
    ]
   },
   {
