--- a/hgr_formatter.ipynb
+++ b/hgr_formatter.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "6ff35075-07cc-429a-b5f5-501205d3d5d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'pklz_to_incmat' from 'utils.hypergraph_conversion' (/home/shkim/myResearch/ML/utils/hypergraph_conversion.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/shkim/myResearch/ML/hgr_formatter.ipynb 셀 1\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bgloryday/home/shkim/myResearch/ML/hgr_formatter.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2Bgloryday/home/shkim/myResearch/ML/hgr_formatter.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mglob\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2Bgloryday/home/shkim/myResearch/ML/hgr_formatter.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mhypergraph_conversion\u001b[39;00m \u001b[39mimport\u001b[39;00m pklz_to_incmat\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'pklz_to_incmat' from 'utils.hypergraph_conversion' (/home/shkim/myResearch/ML/utils/hypergraph_conversion.py)"
+     ]
+    }
+   ],
    "source": [
     "import gzip\n",
     "import numpy as np\n",
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "74b4e86f-6a76-4662-94b4-0d76dfe75f17",
    "metadata": {},
    "outputs": [],
@@ -32,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "8df9c720-23f3-4373-957d-ff9e4ef88b0f",
    "metadata": {},
    "outputs": [],
@@ -42,6 +54,13 @@
     "\n",
     "H, net2node, _ = pklz_to_incmat(xx)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
