--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "3332b7d1-204c-4b68-8e8d-00895f8106cf",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "             shape=(3, 5), nnz=3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "6c731c40-943b-488a-85bb-2a1302aed3b4",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "8e4ecd99-5ccd-4b1b-b357-2483e8c958df",
    "metadata": {},
    "outputs": [
@@ -89,11 +89,11 @@
        "    <tr>\n",
        "      <th>x</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.903274</td>\n",
+       "      <td>0.957427</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>y</th>\n",
-       "      <td>0.903274</td>\n",
+       "      <td>0.957427</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -102,22 +102,22 @@
       ],
       "text/plain": [
        "          x         y\n",
-       "x  1.000000  0.903274\n",
-       "y  0.903274  1.000000"
+       "x  1.000000  0.957427\n",
+       "y  0.957427  1.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.corr()"
+    "df.corr('spearman')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f8f4f919-fbd2-4a60-90b0-3719442b4b8f",
    "metadata": {},
    "outputs": [
@@ -153,10 +153,10 @@
        "         64.72,  66.68,  68.64,  70.6 ,  72.56,  74.52,  76.48,  78.44,\n",
        "         80.4 ,  82.36,  84.32,  86.28,  88.24,  90.2 ,  92.16,  94.12,\n",
        "         96.08,  98.04, 100.  ]),\n",
-       " <matplotlib.collections.QuadMesh at 0x7ff9bc5d87d0>)"
+       " <matplotlib.collections.QuadMesh at 0x7f3e71f1e090>)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -174,6 +174,13 @@
    "source": [
     "plt.hist2d(df['x'], df['y'], bins=50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
