--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -153,7 +153,7 @@
        "         64.72,  66.68,  68.64,  70.6 ,  72.56,  74.52,  76.48,  78.44,\n",
        "         80.4 ,  82.36,  84.32,  86.28,  88.24,  90.2 ,  92.16,  94.12,\n",
        "         96.08,  98.04, 100.  ]),\n",
-       " <matplotlib.collections.QuadMesh at 0x7f3e71f1e090>)"
+       " <matplotlib.collections.QuadMesh at 0x7f7688615a10>)"
       ]
      },
      "execution_count": 5,
@@ -177,10 +177,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[37890.0000,     0.0000,     0.0000,  ...,    94.0000,     0.1026,\n",
+       "             1.0000],\n",
+       "        [39681.0000,     0.0000,     0.0000,  ...,    94.0000,     0.0000,\n",
+       "             1.0000],\n",
+       "        [  957.0000,     0.0000,     0.0000,  ...,    93.0000,     0.0000,\n",
+       "             1.0000],\n",
+       "        ...,\n",
+       "        [ 5122.0000, 40937.0000,     0.0000,  ...,     0.0000,     0.0000,\n",
+       "             0.0000],\n",
+       "        [ 5124.0000, 40938.0000,     0.0000,  ...,     0.0000,     0.0000,\n",
+       "             0.0000],\n",
+       "        [ 5124.0000, 40938.0000,     0.0000,  ...,     0.0000,     0.0000,\n",
+       "             0.0000]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xxx = torch.load('baselines/net2/net2_efeat/jpeg_encoder_0.55_0.75.pt')\n",
+    "torch.set_printoptions(sci_mode=False)\n",
+    "xxx"
+   ]
   }
  ],
  "metadata": {
